fixing grid layout bug

--- a/grid/layout7.css
+++ b/grid/layout7.css
@@ -1,89 +1,90 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    font-size: 10px;
+  font-size: 10px;
 }
 
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    line-height: 1.6;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  line-height: 1.6;
 
-    background-color: #1d2939;
-    height: 100vh;
+  background-color: #1d2939;
+  height: 100vh;
 }
 
 .product-grid {
-    height: 100%;
+  height: 100%;
 
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    place-items: center;
-    gap: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  place-items: center;
+  gap: 2rem;
 }
 
 .product-grid__product {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(10, 3rem);
-    align-items: center;
-    color: white;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(10, 3rem);
+  align-items: center;
+  color: white;
 }
 
 .product-grid__product--img {
-    grid-column: 1 / -1;
-    grid-row: 1 / 8;
-    
-    height: 100%;
-    width: 100%;
+  grid-column: 1 / -1;
+  grid-row: 1 / 8;
+
+  height: 100%;
+  width: 100%;
 }
 
 .product-grid__product--img img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .product-grid__product--dept {
-    grid-row: 8 / 9;
-    
-    font-size: 1.2rem;
-    font-weight: 500;
-    color: rgba(222, 222, 222, 0.5);
+  grid-row: 8 / 9;
+  grid-column: 1 / 2;
+
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: rgba(222, 222, 222, 0.5);
 }
 
 .product-grid__product--name {
-    grid-column: 1 / -1;
-    grid-row: 9 / 10;
+  grid-column: 1 / -1;
+  grid-row: 9 / 10;
 
-    font-size: 1.6rem;
+  font-size: 1.6rem;
 }
 
 .product-grid__product--price {
-    grid-column: 1 / 3;
-    grid-row: 10 / 11;
+  grid-column: 1 / 3;
+  grid-row: 10 / 11;
 
-    font-size: 1.4rem;
+  font-size: 1.4rem;
 }
 
 .product-grid__product--price span:first-child {
-    text-decoration: line-through;
-    color: rgba(222, 222, 222, 0.5);
-    font-weight: bold;
+  text-decoration: line-through;
+  color: rgba(222, 222, 222, 0.5);
+  font-weight: bold;
 }
 
 .product-grid__product--price span:last-child {
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
 }
 
 .product-grid__product--discount {
-    grid-column: 3 / 4;
-    grid-row: 8 / 9;
-    font-size: 1rem;
-    font-weight: bold;
+  grid-column: 3 / 4;
+  grid-row: 8 / 9;
+  font-size: 1rem;
+  font-weight: bold;
 }
